update README.md and comment

--- a/piwik/docker-compose.yml
+++ b/piwik/docker-compose.yml
@@ -5,7 +5,6 @@ services:
     ports:
       - 8088:80
     volumes:
-      # - /Users/jmpews/vulenv/piwik/piwik:/var/www/html/public
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./var/log/nginx:/var/log/nginx
     volumes_from: [piwik]
@@ -16,11 +15,12 @@ services:
       context: .
       dockerfile: ./php/Dockerfile.piwik
     volumes:
-      # - /Users/jmpews/vulenv/piwik/piwik:/var/www/html/public
       - ./var/log/php:/var/log/php
+      # piwiki
       - /Users/jmpews/Downloads/piwik-2.17.1/piwik:/var/www/html/
     environment:
       PHP_IDE_CONFIG: "serverName=docker"
       PHP_XDEBUG_ENABLED: 0 # Set 1 to enable.
+      # your host ip
       XDEBUG_CONFIG: remote_host=10.0.246.147
 
