--- a/xdebug/docker-compose.yml
+++ b/xdebug/docker-compose.yml
@@ -20,5 +20,6 @@ services:
     environment:
       PHP_IDE_CONFIG: "serverName=docker"
       PHP_XDEBUG_ENABLED: 1 # Set 1 to enable.
+      # your host ip
       XDEBUG_CONFIG: remote_host=10.0.246.147
 
