--- a/xdebug/docker-compose.yml
+++ b/xdebug/docker-compose.yml
@@ -21,5 +21,5 @@ services:
       PHP_IDE_CONFIG: "serverName=docker"
       PHP_XDEBUG_ENABLED: 1 # Set 1 to enable.
       # your host ip
-      XDEBUG_CONFIG: remote_host=10.0.246.147
+      XDEBUG_CONFIG: remote_host=x.x.x.x
 
