--- a/xdebug/php/xdebug.ini
+++ b/xdebug/php/xdebug.ini
@@ -5,8 +5,8 @@ xdebug.remote_autostart=1
 xdebug.remote_port=9999
 xdebug.remote_autostart=0
 ; no need for remote host
-xdebug.remote_connect_back=1
+; xdebug.remote_connect_back=1
 xdebug.idekey="PHPSTORM"
 xdebug.profiler_enable=0
-; xdebug.remote_host=127.0.0.1
+xdebug.remote_host=127.0.0.1
 xdebug.remote_log=/var/log/php/xdebug_remote.log
