--- a/piwik/php/xdebug.ini
+++ b/piwik/php/xdebug.ini
@@ -2,10 +2,9 @@ xdebug.default_enable=0
 xdebug.remote_enable=1
 xdebug.remote_autostart=1
 ; xdebug.remote_handler=dbgp
-; port 9000 is used by php-fpm
 xdebug.remote_port=9999
 xdebug.remote_autostart=0
-; no need for remote host
+; if you config this, no need for remote host.(just for linux)
 xdebug.remote_connect_back=0
 xdebug.idekey="PHPSTORM"
 xdebug.profiler_enable=0
