--- a/xdebug/php/xdebug.ini
+++ b/xdebug/php/xdebug.ini
@@ -2,9 +2,9 @@ xdebug.default_enable=0
 xdebug.remote_enable=1
 xdebug.remote_autostart=1
 ; port 9000 is used by php-fpm
-xdebug.remote_port=9999
+xdebug.remote_port=9000
 xdebug.remote_autostart=0
-; no need for remote host
+; if you config this, no need for remote host.(just for linux)
 ; xdebug.remote_connect_back=1
 xdebug.idekey="PHPSTORM"
 xdebug.profiler_enable=0
